# Sp0tify_Backend

./: .gitignore  Pipfile  README.md  Spacefile  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  vercel.json
api/: index.py
sp0tify_backend/: main.py
sp0tify_backend/routers/: album.py  leaderboard.py  lyrics.py  search.py  song.py  utils.py  video.py
src/: main.py
src/models/: search.py  song.py
src/routers/: album.py  artist.py  charts.py  leaderboard.py  lyrics.py  search.py  song.py  video.py
